--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "12e8f854",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "2ff937b6",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "7eb3048d",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "37c81333",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "cfb0e689",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
     "\n",
     "models = {\n",
     "    'lr': {'name': 'Logistic Regression       ',\n",
-    "           'estimator': LogisticRegression(), \n",
+    "           'estimator': LogisticRegression(random_state=0), \n",
     "           'param': [{'solver': ['lbfgs', 'liblinear', 'newton-cg', 'newton-cholesky', 'sag', 'saga']}],\n",
     "          },\n",
     "}\n",
@@ -263,19 +263,94 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b765de80",
+   "cell_type": "markdown",
+   "id": "4b11cdc6",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "The best solver for f1 score seems to be saga. It can handle multinomial schemes as well as one versus rest.\n",
-    "We will test which will be better:"
+    "The best solver for f1 score seems to be saga. It can handle multinomial schemes as well as one versus rest."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
+   "id": "b765de80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n",
+      "# Tuning hyper-parameters for f1\n",
+      "\n",
+      "----------------------------------------\n",
+      "Trying model Logistic Regression       \n",
+      "Best parameters set found on train set:\n",
+      "\n",
+      "{'solver': 'lbfgs'}\n",
+      "\n",
+      "Grid scores on train set:\n",
+      "\n",
+      "Mean test score: [0.84595143 0.84390669 0.83968037 0.84383827 0.84240093]\n",
+      "Std test score: [0.00680967 0.00641024 0.00649584 0.00655477 0.00603016]\n",
+      "Params test score: [{'solver': 'lbfgs'}, {'solver': 'liblinear'}, {'solver': 'newton-cg'}, {'solver': 'newton-cholesky'}, {'solver': 'sag'}]\n",
+      "\n",
+      "Detailed classification report for the best parameter set:\n",
+      "\n",
+      "The model is trained on the full train set.\n",
+      "The scores are computed on the full test set.\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.80      0.81      0.80      1000\n",
+      "           1       0.98      0.95      0.96      1000\n",
+      "           2       0.72      0.74      0.73      1000\n",
+      "           3       0.83      0.85      0.84      1000\n",
+      "           4       0.72      0.75      0.73      1000\n",
+      "           5       0.92      0.92      0.92      1000\n",
+      "           6       0.61      0.57      0.59      1000\n",
+      "           7       0.91      0.92      0.92      1000\n",
+      "           8       0.94      0.92      0.93      1000\n",
+      "           9       0.94      0.93      0.93      1000\n",
+      "\n",
+      "    accuracy                           0.84     10000\n",
+      "   macro avg       0.84      0.84      0.84     10000\n",
+      "weighted avg       0.84      0.84      0.84     10000\n",
+      "\n",
+      "\n",
+      "Summary of results for f1\n",
+      "Estimator\n",
+      "Logistic Regression       \t - score: 0.85%\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_lbls = ['lr']\n",
+    "\n",
+    "models = {\n",
+    "    'lr': {'name': 'Logistic Regression       ',\n",
+    "           'estimator': LogisticRegression(random_state=0), \n",
+    "           'param': [{'solver': ['lbfgs', 'liblinear', 'newton-cg', 'newton-cholesky', 'sag']}],\n",
+    "          },\n",
+    "}\n",
+    "\n",
+    "model_lbls = ['lr']\n",
+    "scores = ['f1']\n",
+    "\n",
+    "evaluate_models(models)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5296923e",
+   "metadata": {},
+   "source": [
+    "The second best solver seems to be lbfgs. We will compare them along with the different schemes: multinomial and one versus rest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "8d2a8cc9",
    "metadata": {},
    "outputs": [
@@ -290,13 +365,13 @@
       "Trying model Logistic Regression       \n",
       "Best parameters set found on train set:\n",
       "\n",
-      "{'multi_class': 'ovr'}\n",
+      "{'multi_class': 'ovr', 'solver': 'saga'}\n",
       "\n",
       "Grid scores on train set:\n",
       "\n",
-      "Mean test score: [0.8433725  0.84226077]\n",
-      "Std test score: [0.00813071 0.00648667]\n",
-      "Params test score: [{'multi_class': 'ovr'}, {'multi_class': 'multinomial'}]\n",
+      "Mean test score: [0.84397694 0.84826809 0.84595143 0.84578108]\n",
+      "Std test score: [0.00649334 0.00623359 0.00680967 0.00658662]\n",
+      "Params test score: [{'multi_class': 'ovr', 'solver': 'lbfgs'}, {'multi_class': 'ovr', 'solver': 'saga'}, {'multi_class': 'multinomial', 'solver': 'lbfgs'}, {'multi_class': 'multinomial', 'solver': 'saga'}]\n",
       "\n",
       "Detailed classification report for the best parameter set:\n",
       "\n",
@@ -306,24 +381,24 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.79      0.80      0.79      1000\n",
-      "           1       0.97      0.95      0.96      1000\n",
+      "           1       0.98      0.95      0.96      1000\n",
       "           2       0.72      0.74      0.73      1000\n",
       "           3       0.82      0.86      0.84      1000\n",
-      "           4       0.73      0.76      0.75      1000\n",
-      "           5       0.94      0.90      0.92      1000\n",
-      "           6       0.63      0.53      0.58      1000\n",
-      "           7       0.90      0.94      0.92      1000\n",
-      "           8       0.92      0.94      0.93      1000\n",
-      "           9       0.95      0.94      0.94      1000\n",
+      "           4       0.71      0.76      0.74      1000\n",
+      "           5       0.92      0.91      0.91      1000\n",
+      "           6       0.62      0.52      0.57      1000\n",
+      "           7       0.91      0.93      0.92      1000\n",
+      "           8       0.93      0.94      0.93      1000\n",
+      "           9       0.94      0.94      0.94      1000\n",
       "\n",
-      "    accuracy                           0.84     10000\n",
-      "   macro avg       0.84      0.84      0.84     10000\n",
-      "weighted avg       0.84      0.84      0.84     10000\n",
+      "    accuracy                           0.83     10000\n",
+      "   macro avg       0.83      0.83      0.83     10000\n",
+      "weighted avg       0.83      0.83      0.83     10000\n",
       "\n",
       "\n",
       "Summary of results for f1\n",
       "Estimator\n",
-      "Logistic Regression       \t - score: 0.84%\n"
+      "Logistic Regression       \t - score: 0.85%\n"
      ]
     }
    ],
@@ -332,8 +407,8 @@
     "\n",
     "models = {\n",
     "    'lr': {'name': 'Logistic Regression       ',\n",
-    "           'estimator': LogisticRegression(solver='saga'), \n",
-    "           'param': [{'multi_class': ['ovr', 'multinomial']}],\n",
+    "           'estimator': LogisticRegression(random_state=0), \n",
+    "           'param': [{'solver': ['lbfgs', 'saga'], 'multi_class': ['ovr', 'multinomial']}],\n",
     "          },\n",
     "}\n",
     "\n",
@@ -345,18 +420,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f4ac6a2",
+   "id": "d95bf1e2",
    "metadata": {},
    "source": [
-    "One versus rest scheme seems to be better."
+    "Saga beats lbfgs and one versus rest scheme seems to be the best."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ed28ba9",
+   "cell_type": "markdown",
+   "id": "c8cf17a2",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Saga solver is compatible with all penalties.\n",
     "We will compare them."
@@ -595,25 +668,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87384fa4",
+   "cell_type": "markdown",
+   "id": "6ba97930",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "9d752e47",
+   "id": "abcd27bd",
    "metadata": {},
    "source": [
     "### Bagging clasifier using logistic regression\n",
-    "We will try to gain better results using bagging ansemble learning"
+    "We will try to gain better results using bagging ensemble learning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "e40835e3",
    "metadata": {},
    "outputs": [],
@@ -672,12 +743,221 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "062c63da",
+   "metadata": {},
+   "source": [
+    "Ensemble with many estimators, trained on all features but on a small set of the data (taken with replacement)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "26fc39c5",
+   "execution_count": 7,
+   "id": "ec0afe98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.78      0.81      0.80      1000\n",
+      "           1       0.97      0.94      0.96      1000\n",
+      "           2       0.70      0.72      0.71      1000\n",
+      "           3       0.79      0.87      0.83      1000\n",
+      "           4       0.71      0.77      0.74      1000\n",
+      "           5       0.91      0.86      0.89      1000\n",
+      "           6       0.64      0.47      0.54      1000\n",
+      "           7       0.88      0.89      0.88      1000\n",
+      "           8       0.90      0.94      0.92      1000\n",
+      "           9       0.88      0.94      0.91      1000\n",
+      "\n",
+      "    accuracy                           0.82     10000\n",
+      "   macro avg       0.82      0.82      0.82     10000\n",
+      "weighted avg       0.82      0.82      0.82     10000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "bg = BaggingClassifier(estimator=LogisticRegression(solver='saga', multi_class='ovr', penalty='l1', n_jobs=-1, C = 0.7),\n",
+    "                           n_estimators=20,\n",
+    "                           max_samples=0.1,\n",
+    "                           bootstrap_features=True,\n",
+    "                           n_jobs=-1)\n",
+    "\n",
+    "bg.fit(train_x, train_y)\n",
+    "true_y, pred_y = test_y, bg.predict(test_x)\n",
+    "print(classification_report(true_y, pred_y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a08f3012",
+   "metadata": {},
+   "source": [
+    "### AdaBoosting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "101f3853",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.ensemble import AdaBoostClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "46036d63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00      1000\n",
+      "           1       0.00      0.00      0.00      1000\n",
+      "           2       0.00      0.00      0.00      1000\n",
+      "           3       0.10      1.00      0.18      1000\n",
+      "           4       0.00      0.00      0.00      1000\n",
+      "           5       0.00      0.00      0.00      1000\n",
+      "           6       0.00      0.00      0.00      1000\n",
+      "           7       0.00      0.00      0.00      1000\n",
+      "           8       0.00      0.00      0.00      1000\n",
+      "           9       0.00      0.00      0.00      1000\n",
+      "\n",
+      "    accuracy                           0.10     10000\n",
+      "   macro avg       0.01      0.10      0.02     10000\n",
+      "weighted avg       0.01      0.10      0.02     10000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "ab = AdaBoostClassifier(estimator=LogisticRegression(solver='saga', multi_class='ovr', penalty='l1', n_jobs=-1, C = 0.7, random_state=0))\n",
+    "\n",
+    "ab.fit(train_x, train_y)\n",
+    "true_y, pred_y = test_y, ab.predict(test_x)\n",
+    "print(classification_report(true_y, pred_y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ba1223c",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8e262b3",
+   "metadata": {},
+   "source": [
+    "We conclude that the best hyper parameters for the problem are:\n",
+    "Solver: 'SAGA',\n",
+    "Scheme: One versus Rest\n",
+    "Regularization: L1\n",
+    "and inverse regularization strength C = 0.7\n",
+    "\n",
+    "Logistic regression does not benefit from ensemble techniques\n",
+    "Because the tests were done for 20 000 entries in the train data in order results to be consistent with the other algorithm tests we will do final test once more."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "16fc3224",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transformer = torchvision.transforms.Compose([torchvision.transforms.ToTensor(),\n",
+    "                                              transforms.Lambda(lambda x: torch.flatten(x))])\n",
+    "\n",
+    "train_set=torchvision.datasets.FashionMNIST('./files/fashion-mnist/', train=True, download=True,\n",
+    "                             transform=transformer)\n",
+    "\n",
+    "test_set=torchvision.datasets.FashionMNIST('./files/fashion-mnist/', train=False, download=True,\n",
+    "                             transform=transformer)\n",
+    "\n",
+    "batch_size_train= len(train_set)//5\n",
+    "batch_size_test=len(test_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0daab31a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader = torch.utils.data.DataLoader(\n",
+    "  train_set,\n",
+    "  batch_size=batch_size_train, shuffle=True)\n",
+    "\n",
+    "test_loader = torch.utils.data.DataLoader(\n",
+    "  test_set,\n",
+    "  batch_size=batch_size_test, shuffle=True)\n",
+    "\n",
+    "train_enumerated = enumerate(train_loader)\n",
+    "batch_idx, (train_x, train_y) = next(train_enumerated)\n",
+    "\n",
+    "test_enumerated = enumerate(test_loader)\n",
+    "batch_idx, (test_x, test_y) = next(test_enumerated)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "96463116",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.80      0.80      0.80      1000\n",
+      "           1       0.97      0.95      0.96      1000\n",
+      "           2       0.71      0.72      0.72      1000\n",
+      "           3       0.82      0.86      0.84      1000\n",
+      "           4       0.71      0.75      0.73      1000\n",
+      "           5       0.93      0.89      0.91      1000\n",
+      "           6       0.62      0.52      0.57      1000\n",
+      "           7       0.89      0.93      0.91      1000\n",
+      "           8       0.92      0.94      0.93      1000\n",
+      "           9       0.93      0.94      0.94      1000\n",
+      "\n",
+      "    accuracy                           0.83     10000\n",
+      "   macro avg       0.83      0.83      0.83     10000\n",
+      "weighted avg       0.83      0.83      0.83     10000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr = LogisticRegression(solver='saga', multi_class='ovr', penalty='l1', n_jobs=-1, C = 0.7)\n",
+    "\n",
+    "lr.fit(train_x, train_y)\n",
+    "true_y, pred_y = test_y, lr.predict(test_x)\n",
+    "print(classification_report(true_y, pred_y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5aaf0270",
+   "metadata": {},
+   "source": [
+    "Logistic regression scores 83% precision and f1"
+   ]
   }
  ],
  "metadata": {
