Some explanations added

--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -185,6 +185,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8b62bd60",
+   "metadata": {},
+   "source": [
+    "Logistic regression is linear classifier that categorizes the example as the highest probable class based on linear model of the training data. Because the linear function is unbounded, in order to get probability, the result is the put in sigmoid function that gives a number between 0 and 1. The logistic regression is binary classifier by default, but can be expanded to multi class either by one versus rest scheme or multinomial generalization.\n",
+    "The latter scheme runs multiple binary regressions assuming independence of irrelevant alternatives (\"The probability of taking the car to work, rather than the bus do not depend on whether I have a bicycle\")."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "83ac6916",
@@ -424,6 +433,18 @@
    "metadata": {},
    "source": [
     "Saga beats lbfgs and one versus rest scheme seems to be the best."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "164c2142",
+   "metadata": {},
+   "source": [
+    "The logistic regression uses regularization term to exclude extremely large values for any of the regression coefficients in the loss function. This way it can counter overfitting. Two different penalties are available: l1 and l2.\n",
+    "\n",
+    "L1 called also Lasso adds the “absolute value of magnitude” of the coefficient as a penalty term to the loss function.\n",
+    "L2 called also Ridge regression adds the “squared magnitude” of the coefficient as the penalty term.\n",
+    "Elasticnet regularization is linear combination of l1 and l2."
    ]
   },
   {
@@ -669,12 +690,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ba97930",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "abcd27bd",
    "metadata": {},
    "source": [
@@ -858,16 +873,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8e262b3",
+   "id": "3b3e3b77",
    "metadata": {},
    "source": [
     "We conclude that the best hyper parameters for the problem are:\n",
     "Solver: 'SAGA',\n",
-    "Scheme: One versus Rest\n",
+    "Scheme: One versus Rest,\n",
     "Regularization: L1\n",
     "and inverse regularization strength C = 0.7\n",
     "\n",
-    "Logistic regression does not benefit from ensemble techniques\n",
+    "Logistic regression does not benefit from ensemble techniques.\n",
     "Because the tests were done for 20 000 entries in the train data in order results to be consistent with the other algorithm tests we will do final test once more."
    ]
   },
