--- a/knn.ipynb
+++ b/knn.ipynb
@@ -183,6 +183,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5bac77f2",
+   "metadata": {},
+   "source": [
+    "KNN is simple machine learning algorithm. It classifies the test data based on the classes of the closest train entries.\n",
+    "The main hyper parameter for tuning the algorithm is K - the number of the train entries that will be used for classifying the new data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ebab4997",
    "metadata": {},
    "source": [
@@ -292,12 +301,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7f5b845",
+   "id": "421662cf",
    "metadata": {},
    "source": [
     "The graph shows that with low k, we overfit the train data and with high we underfit. The elbow method suggests that we use 4.\n",
     "The highest accuracy score on the test data is observed for k = 5."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3fd2bfd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
