Second hidden layer experiments, more tests needed

--- a/Simple NN.ipynb
+++ b/Simple NN.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "54887a8e",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
     "            clf = GridSearchCV(models[m]['estimator'], models[m]['param'], cv=5,\n",
     "                               scoring='%s_macro' % score, \n",
     "                               return_train_score = False,\n",
-    "                               n_jobs = 2, \n",
+    "                               n_jobs = -1, \n",
     "                               )\n",
     "            clf.fit(train_x, train_y)\n",
     "            print_results(clf)\n",
@@ -606,6 +606,114 @@
    "metadata": {},
    "source": [
     "The more detailed search with alpha close to 0.001 gave worse results.We will stick with alpha = 0.001"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3183e706",
+   "metadata": {},
+   "source": [
+    "Second hidden layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "876625b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n",
+      "# Tuning hyper-parameters for f1\n",
+      "\n",
+      "----------------------------------------\n",
+      "Trying model Multi-layer Perceptron Classifier       \n",
+      "Best parameters set found on train set:\n",
+      "\n",
+      "{'hidden_layer_sizes': (500, 300)}\n",
+      "\n",
+      "Grid scores on train set:\n",
+      "\n",
+      "Mean test score: [0.8736102  0.87558772 0.86897231 0.87256248]\n",
+      "Std test score: [0.00683737 0.01032117 0.00216618 0.00868897]\n",
+      "Params test score: [{'hidden_layer_sizes': (500, 500)}, {'hidden_layer_sizes': (500, 300)}, {'hidden_layer_sizes': (500, 200)}, {'hidden_layer_sizes': (500, 100)}]\n",
+      "\n",
+      "Detailed classification report for the best parameter set:\n",
+      "\n",
+      "The model is trained on the full train set.\n",
+      "The scores are computed on the full test set.\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.79      0.82      0.80      1000\n",
+      "           1       0.97      0.97      0.97      1000\n",
+      "           2       0.73      0.82      0.77      1000\n",
+      "           3       0.87      0.87      0.87      1000\n",
+      "           4       0.78      0.78      0.78      1000\n",
+      "           5       0.97      0.92      0.95      1000\n",
+      "           6       0.73      0.61      0.66      1000\n",
+      "           7       0.92      0.96      0.94      1000\n",
+      "           8       0.97      0.96      0.96      1000\n",
+      "           9       0.94      0.96      0.95      1000\n",
+      "\n",
+      "    accuracy                           0.87     10000\n",
+      "   macro avg       0.87      0.87      0.87     10000\n",
+      "weighted avg       0.87      0.87      0.87     10000\n",
+      "\n",
+      "\n",
+      "Summary of results for f1\n",
+      "Estimator\n",
+      "Multi-layer Perceptron Classifier       \t - score: 0.88%\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_lbls = ['mp']\n",
+    "\n",
+    "models = {\n",
+    "    'mp': {'name': 'Multi-layer Perceptron Classifier       ',\n",
+    "           'estimator': MLPClassifier(random_state=0, alpha=0.001), \n",
+    "           'param': [{'hidden_layer_sizes':[(500, 500), (500, 300), (500, 200), (500, 100)]}],\n",
+    "          },\n",
+    "}\n",
+    "\n",
+    "model_lbls = ['mp']\n",
+    "scores = ['f1']\n",
+    "\n",
+    "evaluate_models(models)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b214317b",
+   "metadata": {},
+   "source": [
+    "Testing different combinations between neurons count:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f7e475d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_lbls = ['mp']\n",
+    "\n",
+    "models = {\n",
+    "    'mp': {'name': 'Multi-layer Perceptron Classifier       ',\n",
+    "           'estimator': MLPClassifier(random_state=0, alpha=0.001), \n",
+    "           'param': [{'hidden_layer_sizes':[(600, 300), (768, 200), (400, 300), (500, 50), (300, 30)]}],\n",
+    "          },\n",
+    "}\n",
+    "\n",
+    "model_lbls = ['mp']\n",
+    "scores = ['f1']\n",
+    "\n",
+    "evaluate_models(models)"
    ]
   }
  ],
