Second layer tests - not much improvement

--- a/Simple NN.ipynb
+++ b/Simple NN.ipynb
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3183e706",
+   "id": "7e649b54",
    "metadata": {},
    "source": [
     "Second hidden layer"
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "876625b5",
+   "id": "4f2ef704",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
     "           'param': [{'hidden_layer_sizes':[(500, 500), (500, 300), (500, 200), (500, 100)]}],\n",
     "          },\n",
     "}\n",
-    "\n",
+    "0\n",
     "model_lbls = ['mp']\n",
     "scores = ['f1']\n",
     "\n",
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b214317b",
+   "id": "831e27e6",
    "metadata": {},
    "source": [
     "Testing different combinations between neurons count:"
@@ -696,10 +696,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6f7e475d",
+   "execution_count": 8,
+   "id": "592ea251",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n",
+      "# Tuning hyper-parameters for f1\n",
+      "\n",
+      "----------------------------------------\n",
+      "Trying model Multi-layer Perceptron Classifier       \n",
+      "Best parameters set found on train set:\n",
+      "\n",
+      "{'hidden_layer_sizes': (500, 50)}\n",
+      "\n",
+      "Grid scores on train set:\n",
+      "\n",
+      "Mean test score: [0.86977518 0.8721577  0.87049862 0.8754242  0.87203675]\n",
+      "Std test score: [0.0048808  0.00782659 0.00824288 0.00338346 0.00336529]\n",
+      "Params test score: [{'hidden_layer_sizes': (600, 300)}, {'hidden_layer_sizes': (768, 200)}, {'hidden_layer_sizes': (400, 300)}, {'hidden_layer_sizes': (500, 50)}, {'hidden_layer_sizes': (300, 30)}]\n",
+      "\n",
+      "Detailed classification report for the best parameter set:\n",
+      "\n",
+      "The model is trained on the full train set.\n",
+      "The scores are computed on the full test set.\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.81      0.81      0.81      1000\n",
+      "           1       0.98      0.96      0.97      1000\n",
+      "           2       0.74      0.79      0.77      1000\n",
+      "           3       0.86      0.87      0.87      1000\n",
+      "           4       0.78      0.76      0.77      1000\n",
+      "           5       0.96      0.93      0.95      1000\n",
+      "           6       0.69      0.66      0.67      1000\n",
+      "           7       0.92      0.95      0.93      1000\n",
+      "           8       0.95      0.96      0.96      1000\n",
+      "           9       0.94      0.95      0.95      1000\n",
+      "\n",
+      "    accuracy                           0.86     10000\n",
+      "   macro avg       0.86      0.86      0.86     10000\n",
+      "weighted avg       0.86      0.86      0.86     10000\n",
+      "\n",
+      "\n",
+      "Summary of results for f1\n",
+      "Estimator\n",
+      "Multi-layer Perceptron Classifier       \t - score: 0.88%\n"
+     ]
+    }
+   ],
    "source": [
     "model_lbls = ['mp']\n",
     "\n",
@@ -715,6 +763,60 @@
     "\n",
     "evaluate_models(models)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78e24f59",
+   "metadata": {},
+   "source": [
+    "It looks like 500 for the first layer is optimal. We got simmilar results with second layer 300 and 50, but worse with second layer 200 or 100. We will try 500-300-50."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ed2f5f4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.80      0.78      0.79      1000\n",
+      "           1       0.99      0.97      0.98      1000\n",
+      "           2       0.77      0.77      0.77      1000\n",
+      "           3       0.89      0.87      0.88      1000\n",
+      "           4       0.79      0.77      0.78      1000\n",
+      "           5       0.96      0.93      0.94      1000\n",
+      "           6       0.63      0.72      0.67      1000\n",
+      "           7       0.93      0.94      0.93      1000\n",
+      "           8       0.98      0.94      0.96      1000\n",
+      "           9       0.93      0.96      0.95      1000\n",
+      "\n",
+      "    accuracy                           0.86     10000\n",
+      "   macro avg       0.87      0.86      0.87     10000\n",
+      "weighted avg       0.87      0.86      0.87     10000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "mlp = MLPClassifier(random_state=0, alpha=0.001, hidden_layer_sizes=(500, 300, 50))\n",
+    "\n",
+    "mlp.fit(train_x, train_y)\n",
+    "true_y, pred_y = test_y, mlp.predict(test_x)\n",
+    "print(classification_report(true_y, pred_y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06f531d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
