--- a/Naive_Bayes_Classifier.ipynb
+++ b/Naive_Bayes_Classifier.ipynb
@@ -1405,139 +1405,20 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dd52a96f",
    "metadata": {},
    "source": [
-    "BernoulliNB is the best classifier for this dataset. Let's try to improve the score with an ensemble model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "cb16ec50",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GradientBoostingClassifier(n_estimators=20)"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bnb = BernoulliNB(alpha=0, binarize=0.05)\n",
-    "\n",
-    "ada_boost = AdaBoostClassifier(bnb,n_estimators=20)\n",
-    "gr_boost = GradientBoostingClassifier(n_estimators=20)\n",
-    "\n",
-    "ada_boost.fit(train_x,train_y)\n",
-    "gr_boost.fit(train_x,train_y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "518d3607",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ada_pred = ada_boost.predict(test_x)\n",
-    "gr_pred = gr_boost.predict(test_x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "ac5b121b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ada Boost with BernoulliNB Classification Report \n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.72      0.04      0.07      1000\n",
-      "           1       0.79      0.73      0.76      1000\n",
-      "           2       0.37      0.62      0.46      1000\n",
-      "           3       0.41      0.79      0.54      1000\n",
-      "           4       0.34      0.43      0.38      1000\n",
-      "           5       0.82      0.75      0.78      1000\n",
-      "           6       0.14      0.00      0.00      1000\n",
-      "           7       0.88      0.04      0.07      1000\n",
-      "           8       0.30      0.97      0.46      1000\n",
-      "           9       0.00      0.00      0.00      1000\n",
-      "\n",
-      "    accuracy                           0.44     10000\n",
-      "   macro avg       0.48      0.44      0.35     10000\n",
-      "weighted avg       0.48      0.44      0.35     10000\n",
-      "\n",
-      "Gradient Boosting Classification Report \n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.80      0.75      0.78      1000\n",
-      "           1       0.99      0.90      0.94      1000\n",
-      "           2       0.69      0.70      0.70      1000\n",
-      "           3       0.73      0.87      0.79      1000\n",
-      "           4       0.69      0.71      0.70      1000\n",
-      "           5       0.96      0.88      0.92      1000\n",
-      "           6       0.59      0.53      0.56      1000\n",
-      "           7       0.87      0.92      0.89      1000\n",
-      "           8       0.93      0.93      0.93      1000\n",
-      "           9       0.89      0.93      0.91      1000\n",
-      "\n",
-      "    accuracy                           0.81     10000\n",
-      "   macro avg       0.81      0.81      0.81     10000\n",
-      "weighted avg       0.81      0.81      0.81     10000\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print (f'Ada Boost with BernoulliNB Classification Report \\n {classification_report(test_y, ada_pred, labels=range(0,10))}')\n",
-    "print (f'Gradient Boosting Classification Report \\n {classification_report(test_y, gr_pred, labels=range(0,10))}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "4dc3a5cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ada Boost with BernoulliNB F1 score = 43.61\n",
-      "Gradient Boosting F1 score = 81.15999999999998\n"
-     ]
-    }
-   ],
-   "source": [
-    "print (f'Ada Boost with BernoulliNB F1 score = {f1_score(test_y, ada_pred,average=\"micro\")*100}')\n",
-    "print (f'Gradient Boosting F1 score = {f1_score(test_y, gr_pred,average=\"micro\")*100}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e4bbaa37",
-   "metadata": {},
-   "source": [
-    "Ada Boost does not improve the score of the BernoulliNB."
+    "BernoulliNB is the best classifier for this dataset with f1 score 72.8."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mnist_venv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "mnist_venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1549,7 +1430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
