--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -44,7 +44,7 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "from sklearn import svm, datasets\n",
-    "from sklearn.svm import SVC\n",
+    "from sklearn.svm import SVC,NuSVC,SVR\n",
     "from sklearn.metrics import classification_report,accuracy_score\n",
     "from sklearn.model_selection import GridSearchCV,cross_validate,train_test_split\n",
     "import matplotlib.pyplot as plt"
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "8620c03e",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "477d3dd5",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "e1c127c0",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "ab69b8f6",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "cdacc0b9",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "0c560913",
    "metadata": {},
    "outputs": [],
@@ -1585,6 +1585,158 @@
    "metadata": {},
    "source": [
     "RBF и Polynomial ядрата дават много добри оценки, като се вижда увеличение от около 12% при полиномиалното. За RBF, обаче, няма почти никаква промяна дори с най-добрите параметри. Въпреки че, RBF дава по-добри резултати, изчисленията с него бяха изключително бавни и за това бих казал, че Polynomial е най-дорото ядро в случая за SVM."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3d9bd1d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_lbls = [\n",
+    "              'NuSVC',\n",
+    "            ]\n",
+    "\n",
+    "models = {\n",
+    "    'NuSVC': {'name': 'NuSVC',\n",
+    "           'estimator': NuSVC(), \n",
+    "           'param': [{}],\n",
+    "          },\n",
+    "}\n",
+    "\n",
+    "scores = ['precision', 'recall','f1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "175d6b92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n",
+      "# Tuning hyper-parameters for precision\n",
+      "\n",
+      "----------------------------------------\n",
+      "Trying model NuSVC\n",
+      "Best parameters set found on train set:\n",
+      "\n",
+      "{}\n",
+      "\n",
+      "Grid scores on train set:\n",
+      "\n",
+      "\n",
+      "Detailed classification report for the best parameter set:\n",
+      "\n",
+      "The model is trained on the full train set.\n",
+      "The scores are computed on the full test set.\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.71      0.76      0.73      1000\n",
+      "           1       1.00      0.87      0.93      1000\n",
+      "           2       0.74      0.69      0.72      1000\n",
+      "           3       0.70      0.83      0.76      1000\n",
+      "           4       0.71      0.73      0.72      1000\n",
+      "           5       0.73      0.86      0.79      1000\n",
+      "           6       0.58      0.43      0.49      1000\n",
+      "           7       0.86      0.85      0.85      1000\n",
+      "           8       0.93      0.85      0.89      1000\n",
+      "           9       0.86      0.91      0.89      1000\n",
+      "\n",
+      "    accuracy                           0.78     10000\n",
+      "   macro avg       0.78      0.78      0.78     10000\n",
+      "weighted avg       0.78      0.78      0.78     10000\n",
+      "\n",
+      "\n",
+      "Summary of results for precision\n",
+      "Estimator\n",
+      "NuSVC\t - score: 0.79%\n",
+      "========================================\n",
+      "# Tuning hyper-parameters for recall\n",
+      "\n",
+      "----------------------------------------\n",
+      "Trying model NuSVC\n",
+      "Best parameters set found on train set:\n",
+      "\n",
+      "{}\n",
+      "\n",
+      "Grid scores on train set:\n",
+      "\n",
+      "\n",
+      "Detailed classification report for the best parameter set:\n",
+      "\n",
+      "The model is trained on the full train set.\n",
+      "The scores are computed on the full test set.\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.71      0.76      0.73      1000\n",
+      "           1       1.00      0.87      0.93      1000\n",
+      "           2       0.74      0.69      0.72      1000\n",
+      "           3       0.70      0.83      0.76      1000\n",
+      "           4       0.71      0.73      0.72      1000\n",
+      "           5       0.73      0.86      0.79      1000\n",
+      "           6       0.58      0.43      0.49      1000\n",
+      "           7       0.86      0.85      0.85      1000\n",
+      "           8       0.93      0.85      0.89      1000\n",
+      "           9       0.86      0.91      0.89      1000\n",
+      "\n",
+      "    accuracy                           0.78     10000\n",
+      "   macro avg       0.78      0.78      0.78     10000\n",
+      "weighted avg       0.78      0.78      0.78     10000\n",
+      "\n",
+      "\n",
+      "Summary of results for recall\n",
+      "Estimator\n",
+      "NuSVC\t - score: 0.79%\n",
+      "========================================\n",
+      "# Tuning hyper-parameters for f1\n",
+      "\n",
+      "----------------------------------------\n",
+      "Trying model NuSVC\n",
+      "Best parameters set found on train set:\n",
+      "\n",
+      "{}\n",
+      "\n",
+      "Grid scores on train set:\n",
+      "\n",
+      "\n",
+      "Detailed classification report for the best parameter set:\n",
+      "\n",
+      "The model is trained on the full train set.\n",
+      "The scores are computed on the full test set.\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.71      0.76      0.73      1000\n",
+      "           1       1.00      0.87      0.93      1000\n",
+      "           2       0.74      0.69      0.72      1000\n",
+      "           3       0.70      0.83      0.76      1000\n",
+      "           4       0.71      0.73      0.72      1000\n",
+      "           5       0.73      0.86      0.79      1000\n",
+      "           6       0.58      0.43      0.49      1000\n",
+      "           7       0.86      0.85      0.85      1000\n",
+      "           8       0.93      0.85      0.89      1000\n",
+      "           9       0.86      0.91      0.89      1000\n",
+      "\n",
+      "    accuracy                           0.78     10000\n",
+      "   macro avg       0.78      0.78      0.78     10000\n",
+      "weighted avg       0.78      0.78      0.78     10000\n",
+      "\n",
+      "\n",
+      "Summary of results for f1\n",
+      "Estimator\n",
+      "NuSVC\t - score: 0.79%\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate_models(models)"
    ]
   }
  ],
