knn all data results and log reg conclusion

--- a/knn.ipynb
+++ b/knn.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "561f6cb8",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "9cc9c989",
    "metadata": {},
    "outputs": [],
@@ -309,9 +309,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "54eacf39",
+   "metadata": {},
+   "source": [
+    "All data run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b20548df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transformer = torchvision.transforms.Compose([torchvision.transforms.ToTensor(),\n",
+    "                                              transforms.Lambda(lambda x: torch.flatten(x))])\n",
+    "\n",
+    "train_set=torchvision.datasets.FashionMNIST('./files/fashion-mnist/', train=True, download=True,\n",
+    "                             transform=transformer)\n",
+    "\n",
+    "test_set=torchvision.datasets.FashionMNIST('./files/fashion-mnist/', train=False, download=True,\n",
+    "                             transform=transformer)\n",
+    "\n",
+    "batch_size_train= len(train_set)\n",
+    "batch_size_test=len(test_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b3380d3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader = torch.utils.data.DataLoader(\n",
+    "  train_set,\n",
+    "  batch_size=batch_size_train, shuffle=True)\n",
+    "\n",
+    "test_loader = torch.utils.data.DataLoader(\n",
+    "  test_set,\n",
+    "  batch_size=batch_size_test, shuffle=True)\n",
+    "\n",
+    "train_enumerated = enumerate(train_loader)\n",
+    "batch_idx, (train_x, train_y) = next(train_enumerated)\n",
+    "\n",
+    "test_enumerated = enumerate(test_loader)\n",
+    "batch_idx, (test_x, test_y) = next(test_enumerated)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "56636149",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.77      0.85      0.81      1000\n",
+      "           1       0.99      0.97      0.98      1000\n",
+      "           2       0.73      0.82      0.77      1000\n",
+      "           3       0.90      0.86      0.88      1000\n",
+      "           4       0.79      0.77      0.78      1000\n",
+      "           5       0.99      0.82      0.90      1000\n",
+      "           6       0.66      0.57      0.61      1000\n",
+      "           7       0.88      0.96      0.92      1000\n",
+      "           8       0.97      0.95      0.96      1000\n",
+      "           9       0.90      0.97      0.93      1000\n",
+      "\n",
+      "    accuracy                           0.86     10000\n",
+      "   macro avg       0.86      0.86      0.85     10000\n",
+      "weighted avg       0.86      0.86      0.85     10000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn = KNeighborsClassifier(n_neighbors=5)\n",
+    "\n",
+    "knn.fit(train_x, train_y)\n",
+    "true_y, pred_y = test_y, knn.predict(test_x)\n",
+    "print(classification_report(true_y, pred_y))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3fd2bfd",
+   "id": "6ec676e0",
    "metadata": {},
    "outputs": [],
    "source": []
