--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "12e8f854",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "id": "2ff937b6",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "id": "7eb3048d",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "id": "37c81333",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "cfb0e689",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b62bd60",
+   "id": "9eb9211b",
    "metadata": {},
    "source": [
     "Logistic regression is linear classifier that categorizes the example as the highest probable class based on linear model of the training data. Because the linear function is unbounded, in order to get probability, the result is the put in sigmoid function that gives a number between 0 and 1. The logistic regression is binary classifier by default, but can be expanded to multi class either by one versus rest scheme or multinomial generalization.\n",
@@ -194,11 +194,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83ac6916",
+   "cell_type": "markdown",
+   "id": "eb5c9861",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Logistic Regression uses different algorithms for solving the optimization problem.\n",
     "Some solvers are limited for one versus rest schemes."
@@ -437,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "164c2142",
+   "id": "64f41542",
    "metadata": {},
    "source": [
     "The logistic regression uses regularization term to exclude extremely large values for any of the regression coefficients in the loss function. This way it can counter overfitting. Two different penalties are available: l1 and l2.\n",
@@ -699,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "id": "e40835e3",
    "metadata": {},
    "outputs": [],
@@ -717,38 +715,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "3c1e4678",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.77      0.83      0.80      1000\n",
-      "           1       0.98      0.94      0.96      1000\n",
-      "           2       0.69      0.69      0.69      1000\n",
-      "           3       0.77      0.87      0.82      1000\n",
-      "           4       0.69      0.74      0.72      1000\n",
-      "           5       0.90      0.88      0.89      1000\n",
-      "           6       0.58      0.42      0.49      1000\n",
-      "           7       0.89      0.88      0.88      1000\n",
-      "           8       0.90      0.94      0.92      1000\n",
-      "           9       0.90      0.93      0.91      1000\n",
-      "\n",
-      "    accuracy                           0.81     10000\n",
-      "   macro avg       0.81      0.81      0.81     10000\n",
-      "weighted avg       0.81      0.81      0.81     10000\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bg = BaggingClassifier(estimator=LogisticRegression(solver='saga', multi_class='ovr', penalty='l1', n_jobs=-1, C = 0.7),\n",
-    "                           n_estimators=20,\n",
-    "                           max_features=0.1,\n",
+    "                           n_estimators=10,\n",
+    "                           max_features=0.2,\n",
     "                           bootstrap_features=True,\n",
     "                           n_jobs=-1)\n",
     "\n",
@@ -767,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "id": "ec0afe98",
    "metadata": {},
    "outputs": [
@@ -777,26 +751,26 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.78      0.81      0.80      1000\n",
+      "           0       0.80      0.82      0.81      1000\n",
       "           1       0.97      0.94      0.96      1000\n",
-      "           2       0.70      0.72      0.71      1000\n",
-      "           3       0.79      0.87      0.83      1000\n",
+      "           2       0.72      0.71      0.71      1000\n",
+      "           3       0.81      0.87      0.84      1000\n",
       "           4       0.71      0.77      0.74      1000\n",
-      "           5       0.91      0.86      0.89      1000\n",
-      "           6       0.64      0.47      0.54      1000\n",
-      "           7       0.88      0.89      0.88      1000\n",
-      "           8       0.90      0.94      0.92      1000\n",
-      "           9       0.88      0.94      0.91      1000\n",
+      "           5       0.94      0.88      0.91      1000\n",
+      "           6       0.64      0.51      0.57      1000\n",
+      "           7       0.89      0.92      0.90      1000\n",
+      "           8       0.90      0.95      0.92      1000\n",
+      "           9       0.91      0.94      0.93      1000\n",
       "\n",
-      "    accuracy                           0.82     10000\n",
-      "   macro avg       0.82      0.82      0.82     10000\n",
-      "weighted avg       0.82      0.82      0.82     10000\n",
+      "    accuracy                           0.83     10000\n",
+      "   macro avg       0.83      0.83      0.83     10000\n",
+      "weighted avg       0.83      0.83      0.83     10000\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "bg = BaggingClassifier(estimator=LogisticRegression(solver='saga', multi_class='ovr', penalty='l1', n_jobs=-1, C = 0.7),\n",
+    "bg = BaggingClassifier(estimator=LogisticRegression(solver='saga', multi_class='ovr', penalty='none', n_jobs=-1),\n",
     "                           n_estimators=20,\n",
     "                           max_samples=0.1,\n",
     "                           bootstrap_features=True,\n",
@@ -809,6 +783,64 @@
   },
   {
    "cell_type": "markdown",
+   "id": "379e222c",
+   "metadata": {},
+   "source": [
+    "Testing with more estimators and less max_samples on each."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "125f7174",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.80      0.81      0.81      1000\n",
+      "           1       0.97      0.94      0.95      1000\n",
+      "           2       0.70      0.72      0.71      1000\n",
+      "           3       0.81      0.87      0.84      1000\n",
+      "           4       0.70      0.76      0.73      1000\n",
+      "           5       0.95      0.85      0.90      1000\n",
+      "           6       0.63      0.49      0.55      1000\n",
+      "           7       0.88      0.92      0.90      1000\n",
+      "           8       0.90      0.95      0.93      1000\n",
+      "           9       0.88      0.94      0.91      1000\n",
+      "\n",
+      "    accuracy                           0.82     10000\n",
+      "   macro avg       0.82      0.82      0.82     10000\n",
+      "weighted avg       0.82      0.82      0.82     10000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "bg = BaggingClassifier(estimator=LogisticRegression(solver='saga', multi_class='ovr', penalty='none', n_jobs=-1),\n",
+    "                           n_estimators=50,\n",
+    "                           max_samples=0.05,\n",
+    "                           bootstrap_features=True,\n",
+    "                           n_jobs=-1)\n",
+    "\n",
+    "bg.fit(train_x, train_y)\n",
+    "true_y, pred_y = test_y, bg.predict(test_x)\n",
+    "print(classification_report(true_y, pred_y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0314797",
+   "metadata": {},
+   "source": [
+    "No improvement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a08f3012",
    "metadata": {},
    "source": [
@@ -817,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "id": "101f3853",
    "metadata": {},
    "outputs": [],
@@ -827,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "id": "46036d63",
    "metadata": {},
    "outputs": [
@@ -837,26 +869,26 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.00      0.00      0.00      1000\n",
-      "           1       0.00      0.00      0.00      1000\n",
-      "           2       0.00      0.00      0.00      1000\n",
-      "           3       0.10      1.00      0.18      1000\n",
-      "           4       0.00      0.00      0.00      1000\n",
-      "           5       0.00      0.00      0.00      1000\n",
-      "           6       0.00      0.00      0.00      1000\n",
-      "           7       0.00      0.00      0.00      1000\n",
-      "           8       0.00      0.00      0.00      1000\n",
-      "           9       0.00      0.00      0.00      1000\n",
+      "           0       0.78      0.71      0.75      1000\n",
+      "           1       0.97      0.72      0.83      1000\n",
+      "           2       0.59      0.31      0.41      1000\n",
+      "           3       0.59      0.87      0.70      1000\n",
+      "           4       0.85      0.01      0.02      1000\n",
+      "           5       0.34      0.99      0.50      1000\n",
+      "           6       0.28      0.64      0.39      1000\n",
+      "           7       0.98      0.15      0.26      1000\n",
+      "           8       0.90      0.81      0.85      1000\n",
+      "           9       0.86      0.02      0.04      1000\n",
       "\n",
-      "    accuracy                           0.10     10000\n",
-      "   macro avg       0.01      0.10      0.02     10000\n",
-      "weighted avg       0.01      0.10      0.02     10000\n",
+      "    accuracy                           0.52     10000\n",
+      "   macro avg       0.71      0.52      0.47     10000\n",
+      "weighted avg       0.71      0.52      0.47     10000\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "ab = AdaBoostClassifier(estimator=LogisticRegression(solver='saga', multi_class='ovr', penalty='l1', n_jobs=-1, C = 0.7, random_state=0))\n",
+    "ab = AdaBoostClassifier(estimator=LogisticRegression(solver='saga', multi_class='ovr', penalty='none', n_jobs=-1, random_state=0))\n",
     "\n",
     "ab.fit(train_x, train_y)\n",
     "true_y, pred_y = test_y, ab.predict(test_x)\n",
@@ -873,7 +905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b3e3b77",
+   "id": "5f7eb073",
    "metadata": {},
    "source": [
     "We conclude that the best hyper parameters for the problem are:\n",
@@ -888,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "16fc3224",
    "metadata": {},
    "outputs": [],
@@ -902,13 +934,13 @@
     "test_set=torchvision.datasets.FashionMNIST('./files/fashion-mnist/', train=False, download=True,\n",
     "                             transform=transformer)\n",
     "\n",
-    "batch_size_train= len(train_set)//5\n",
+    "batch_size_train= len(train_set)\n",
     "batch_size_test=len(test_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "0daab31a",
    "metadata": {},
    "outputs": [],
@@ -930,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "96463116",
    "metadata": {},
    "outputs": [
@@ -940,20 +972,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.80      0.80      0.80      1000\n",
-      "           1       0.97      0.95      0.96      1000\n",
-      "           2       0.71      0.72      0.72      1000\n",
-      "           3       0.82      0.86      0.84      1000\n",
-      "           4       0.71      0.75      0.73      1000\n",
-      "           5       0.93      0.89      0.91      1000\n",
-      "           6       0.62      0.52      0.57      1000\n",
-      "           7       0.89      0.93      0.91      1000\n",
-      "           8       0.92      0.94      0.93      1000\n",
-      "           9       0.93      0.94      0.94      1000\n",
+      "           0       0.80      0.82      0.81      1000\n",
+      "           1       0.97      0.96      0.96      1000\n",
+      "           2       0.72      0.73      0.73      1000\n",
+      "           3       0.82      0.87      0.85      1000\n",
+      "           4       0.72      0.76      0.74      1000\n",
+      "           5       0.95      0.92      0.93      1000\n",
+      "           6       0.65      0.54      0.59      1000\n",
+      "           7       0.90      0.94      0.92      1000\n",
+      "           8       0.92      0.95      0.93      1000\n",
+      "           9       0.95      0.94      0.95      1000\n",
       "\n",
-      "    accuracy                           0.83     10000\n",
-      "   macro avg       0.83      0.83      0.83     10000\n",
-      "weighted avg       0.83      0.83      0.83     10000\n",
+      "    accuracy                           0.84     10000\n",
+      "   macro avg       0.84      0.84      0.84     10000\n",
+      "weighted avg       0.84      0.84      0.84     10000\n",
       "\n"
      ]
     }
