Single hidden layer test with all data

--- a/Simple NN.ipynb
+++ b/Simple NN.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "54887a8e",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2396f353",
    "metadata": {},
    "outputs": [],
@@ -610,10 +610,89 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e649b54",
+   "id": "376c90bb",
    "metadata": {},
    "source": [
-    "Second hidden layer"
+    "Testing on all the train data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d156758b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transformer = torchvision.transforms.Compose([torchvision.transforms.ToTensor(),\n",
+    "                                              transforms.Lambda(lambda x: torch.flatten(x))])\n",
+    "\n",
+    "train_set=torchvision.datasets.FashionMNIST('./files/fashion-mnist/', train=True, download=True,\n",
+    "                             transform=transformer)\n",
+    "\n",
+    "test_set=torchvision.datasets.FashionMNIST('./files/fashion-mnist/', train=False, download=True,\n",
+    "                             transform=transformer)\n",
+    "\n",
+    "batch_size_train= len(train_set)\n",
+    "batch_size_test=len(test_set)\n",
+    "train_loader = torch.utils.data.DataLoader(\n",
+    "  train_set,\n",
+    "  batch_size=batch_size_train, shuffle=True)\n",
+    "\n",
+    "test_loader = torch.utils.data.DataLoader(\n",
+    "  test_set,\n",
+    "  batch_size=batch_size_test, shuffle=True)\n",
+    "\n",
+    "train_enumerated = enumerate(train_loader)\n",
+    "batch_idx, (train_x, train_y) = next(train_enumerated)\n",
+    "\n",
+    "test_enumerated = enumerate(test_loader)\n",
+    "batch_idx, (test_x, test_y) = next(test_enumerated)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "25ead2cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.82      0.84      1000\n",
+      "           1       0.98      0.98      0.98      1000\n",
+      "           2       0.82      0.82      0.82      1000\n",
+      "           3       0.91      0.90      0.90      1000\n",
+      "           4       0.82      0.84      0.83      1000\n",
+      "           5       0.98      0.97      0.98      1000\n",
+      "           6       0.74      0.74      0.74      1000\n",
+      "           7       0.95      0.97      0.96      1000\n",
+      "           8       0.97      0.97      0.97      1000\n",
+      "           9       0.96      0.96      0.96      1000\n",
+      "\n",
+      "    accuracy                           0.90     10000\n",
+      "   macro avg       0.90      0.90      0.90     10000\n",
+      "weighted avg       0.90      0.90      0.90     10000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "mlp = MLPClassifier(random_state=0, alpha=0.001, hidden_layer_sizes=(500))\n",
+    "\n",
+    "mlp.fit(train_x, train_y)\n",
+    "true_y, pred_y = test_y, mlp.predict(test_x)\n",
+    "print(classification_report(true_y, pred_y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd220a61",
+   "metadata": {},
+   "source": [
+    "## Second hidden layer"
    ]
   },
   {
@@ -766,10 +845,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78e24f59",
+   "id": "5bf04522",
    "metadata": {},
    "source": [
-    "It looks like 500 for the first layer is optimal. We got simmilar results with second layer 300 and 50, but worse with second layer 200 or 100. We will try 500-300-50."
+    "It looks like 500 for the first layer is optimal. We got simmilar results with second layer 300 and 50, but worse with second layer 200 or 100. What is more it seems that we start to overfit because the train results are better than the test. We will try 500-300-50."
    ]
   },
   {
@@ -811,12 +890,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06f531d7",
+   "cell_type": "markdown",
+   "id": "23c59305",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Overall the model with the second layer starts to overfit and adding third layer does not improve the situation"
+   ]
   }
  ],
  "metadata": {
